--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <textarea name="" id="form_textarea" cols="30" rows="10" class="form_textarea" placeholder="Введите ваш вопрос"></textarea>
         </div>
         <div class="cont_select">
-            <input type="text" id="form_select" class="form_select" placeholder="Введите ваш город" autocomplete="off">
+            <input type="text" id="form_select" class="form_select" placeholder="Введите город проживания" autocomplete="off">
             <div class="select_result"></div>
         </div>
         <div class="form_submit">
