--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="cont_input">
             <label for="form_bird">День Рождения</label>
             <input type="text" id="form_bird" class="form_element form_bird" placeholder="дд.мм.гггг">
-            <!--<input type="date" id="form_bird" class="form_element form_bird">--> <!--Поле для "Дня рождения" on pure JS-->
+            <!--<input type="date" id="form_bird" class="form_element form_bird">--> <!--Поле "Дня рождения" on pure JS-->
         </div>
         <div class="cont_text">
             <label for="form_textarea"></label>
